Add getAllEmployees endpoint
